--- a/src/css/structure/modules/infragistics.ui.financialchart.css
+++ b/src/css/structure/modules/infragistics.ui.financialchart.css
@@ -1,15 +1,18 @@
 .ui-financialchart-container {
     font-family: "Segoe UI",Arial,sans-serif;
     font-size: 12px;
-    border-width: 0px;
+    border-width: 0;
     -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
+
 .ui-financialchart-mainChart {
 	margin-left: 15px;
 }
+
 .ui-financialchart-volumeChart {
 	margin-left: 15px;
 }
+
 .financialChartMainGrid {
 	height: 100%;
 	width: 100%;
@@ -17,6 +20,7 @@
 	display: -ms-grid;
 	-ms-grid-columns: 100%;
 }
+
 .financialChartPrice {
 	grid-row: 3;
 	-ms-grid-row: 3;
@@ -34,6 +38,15 @@
 	grid-row: 6;
 	-ms-grid-row: 6;
 }
+
+/*
+/////////////////////
+*/
+/* Toolbar styles */
+/*
+/////////////////////
+*/
+
 .financialChartToolbar {
 	display: grid;
 	display: -ms-grid;
@@ -42,168 +55,177 @@
 	-ms-grid-row: 1;
 	-ms-grid-columns: 100%;
 }
+
 .financialChartToolbar .financialChartToolbar {
 	display: flex;
 	display: -ms-flexbox;
 	align-items: center;
-    justify-content: flex-start;
-	flex-flow: row nowrap;
-	-ms-flex-flow: row nowrap;
-    background: #eee;
-    border: 1px solid #ccc;
+	border-width: 1px;
+	border-style: solid;
 }
-.financialChartToolbar, .financialChartToolbar button {
+
+.financialChartToolbar,
+.financialChartToolbar button {
 	font:400 13px "Segoe UI", Arial, sans-serif!important;
 }
+
 .financialChartRangeSelector {
-	text-align: center;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 	text-transform: uppercase;
+	height: 100%;
 }
+
 .financialChartRangeSelector input {
 	display: none;
 }
-.financialChartRangeSelector label {
-	border-right: 1px solid #758696;
-	padding: 0 10px;
-	padding: 0!important;
-	border: none!important;
-	background-color: #eee;
+
+.financialChartRangeSelectorLabel {
+	border-right-width: 1px;
+	border-right-style: solid;
+	cursor: pointer;
+	height: 100%;
 }
+
+.financialChartRangeSelectorLabelSpan {
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 10px;
+	box-sizing: border-box;
+}
+
 .financialChartRangeSelectorLastOption {
-	border: none !important;
+	border: none;
 	padding-right: 0;
 }
-.financialChartRangeSelector label:hover {
-	color: #0090ff;
-	cursor: pointer;
-}
-.financialChartRangeSelector input:checked + span {
-	color: #0090ff;
-	color: #444!important;
-	background-color: #d5d5d5;
-}
-.financialChartRangeSelector label span {
-	padding:2px 8px 4px;
-}
+
+.financialChartIndicatorMenu,
 .financialChartTypePicker {
 	position: relative; 
-	display: inline-block;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.financialChartTypePicker {
 	margin-left: auto;
-	margin-right: 15px;
+	height: 100%;
+	border-left-width: 1px;
+	border-left-style: solid;
 }
+
 .financialChartIndicatorMenu {
-	border-right: solid 1px;
+	height: 100%;
+	padding:0 10px;
+	border-right-width: 1px;
+	border-right-style: solid;
 }
-.financialChartIndicatorMenu, .financialChartTypePicker {
-	position: relative; 
-	display: inline-block;
+
+.financialChartIndicatorMenuDropDownMenu,
+.financialChartTypePickerDropDownMenu {
+	display: flex;
+	flex-direction: column;
+	z-index: 1;
+	position: absolute;
+	top: calc(100% + 1px);
+	box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
 }
+
 .financialChartIndicatorMenuDropDownMenu {
+	left:0;
 	height: 300px;
 	overflow: auto;
 }
-.financialChartIndicatorMenuDropDownMenu, .financialChartTypePickerDropDownMenu {
-	background-color: white;
-	position: relative; 
-	display: inline-block;
-	z-index: 1;
-	position: absolute!important;
-	top: 30px;
-	left:0;
-	-webkit-box-shadow: 0px 4px 10px 1px rgba(0,0,0,0.2);
-	-moz-box-shadow: 0px 4px 10px 1px rgba(0,0,0,0.2);
-	box-shadow: 0px 4px 10px 1px rgba(0,0,0,0.2);
+
+.financialChartTypePickerDropDownMenu {
+	right:0;
 }
+
+.financialChartListItem {
+	cursor: pointer;
+}
+
+.financialChartListItem span {
+	position: relative;
+	/* TODO: figure out why we need z-index here */
+	z-index: -1;
+}
+
+.financialChartTypePickerDropDownMenu .financialChartListItem {
+	display: flex;
+	align-items: center;
+	justify-content: flex-start;
+}
+.financialChartTypePickerDropDownMenu .ui-icon {
+	margin-right: 5px;
+}
+
+.financialChartIndicatorMenuDropDownButton,
 .financialChartTypePickerDropDownButton {
-	height: 25px;
-	width: 30px;
-}
-.financialChartIndicatorMenuDropDownButton, .financialChartTypePickerDropDownButton {
 	background-color:transparent;
 	border:none;
 	outline:none;
 	cursor:pointer;
 	display: flex;
+	justify-content: center;
+	align-items: center;
 }
-.financialChartIndicatorMenuDropDownButton:after {
-	top: calc(0.5em + 3px);
-	margin-left: 5px;
+
+.financialChartTypePickerDropDownButton {
+	background-color:transparent;
+	height: 100%;
+	padding: 0 10px;
 }
-.financialChartTypePickerDropDownButton:after {
-	top: 5px;
-	margin-left: 20px;
-}
-.financialChartIndicatorMenuDropDownButton:after, .financialChartTypePickerDropDownButton:after {
-	width: 0; 
-	height: 0; 
-	border-style: solid;
-    border-width: 4px 4px 0 4px;
-    border-color: #777 transparent transparent transparent;
-	content: "";
-	position: relative;
-	flex: 0;
-}
-.financialChartIndicatorMenu {
-	background: url("data:image/svg+xml,%3Csvg id='Layer_1' data-name='Layer 1' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 55 55'%3E%3Cdefs%3E%3Cstyle%3E.cls-1{fill:%23777;}%3C/style%3E%3C/defs%3E%3Ctitle%3EArtboard 2%3C/title%3E%3Crect class='cls-1' x='46.32' y='16.34' width='5.97' height='38.47'/%3E%3Cpolygon class='cls-1' points='36.73 54.8 42.7 54.8 42.7 20.71 40.34 20.71 36.73 23.92 36.73 54.8'/%3E%3Cpolygon class='cls-1' points='27.14 30.07 27.14 54.8 33.11 54.8 33.11 27.15 28.46 31.28 27.14 30.07'/%3E%3Cpolygon class='cls-1' points='30.74 20.71 29.62 20.71 30.12 21.22 30.74 20.71'/%3E%3Cpolygon class='cls-1' points='17.55 26.49 17.55 54.8 23.52 54.8 23.52 26.76 20.26 23.78 17.55 26.49'/%3E%3Cpolygon class='cls-1' points='7.96 24.97 7.96 26.49 9.48 24.97 7.96 24.97'/%3E%3Cpolygon class='cls-1' points='7.96 54.8 13.93 54.8 13.93 30.11 7.96 36.08 7.96 54.8'/%3E%3Cpolygon class='cls-1' points='37.29 0.2 43.23 6.14 30.12 16.96 21.68 8.51 2.5 27.69 7.29 32.48 20.26 19.52 28.46 27.02 47.33 10.23 52.5 15.4 52.5 14.57 52.5 0.2 37.29 0.2'/%3E%3C/svg%3E") no-repeat 0 0;
-	padding-left:18px;
-}
-.financialChartIndicatorMenu:hover {
-	background: url("data:image/svg+xml,%3Csvg id='Layer_1' data-name='Layer 1' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 55 55'%3E%3Cdefs%3E%3Cstyle%3E.cls-1{fill:%230090ff;}.cls-2{fill:%23777;}%3C/style%3E%3C/defs%3E%3Ctitle%3EArtboard 2%3C/title%3E%3Crect class='cls-1' x='46.32' y='16.34' width='5.97' height='38.47'/%3E%3Cpolygon class='cls-1' points='36.73 54.8 42.7 54.8 42.7 20.71 40.34 20.71 36.73 23.92 36.73 54.8'/%3E%3Cpolygon class='cls-1' points='27.14 30.07 27.14 54.8 33.11 54.8 33.11 27.15 28.46 31.28 27.14 30.07'/%3E%3Cpolygon class='cls-2' points='30.74 20.71 29.62 20.71 30.12 21.22 30.74 20.71'/%3E%3Cpolygon class='cls-1' points='17.55 26.49 17.55 54.8 23.52 54.8 23.52 26.76 20.26 23.78 17.55 26.49'/%3E%3Cpolygon class='cls-2' points='7.96 24.97 7.96 26.49 9.48 24.97 7.96 24.97'/%3E%3Cpolygon class='cls-1' points='7.96 54.8 13.93 54.8 13.93 30.11 7.96 36.08 7.96 54.8'/%3E%3Cpolygon class='cls-1' points='37.29 0.2 43.23 6.14 30.12 16.96 21.68 8.51 2.5 27.69 7.29 32.48 20.26 19.52 28.46 27.02 47.33 10.23 52.5 15.4 52.5 14.57 52.5 0.2 37.29 0.2'/%3E%3C/svg%3E") no-repeat 0 0;
-}
-.financialChartIndicatorMenu:hover, .financialChartTypePicker:hover {
-	cursor:pointer;
-}
-.financialChartIndicatorMenu:hover button, .financialChartTypePicker:hover button {
-	color:#0090ff;
-}
-.financialChartIndicatorMenu:hover .financialChartIndicatorMenuDropDownButton:after, .financialChartTypePicker:hover .financialChartTypePickerDropDownButton:after {
-	border-color: #0090ff transparent transparent transparent;
-}
-.financialChartIndicatorMenuDropDownMenu ul {
+
+.financialChartIndicatorMenuDropDownMenuList {
 	font-weight: bold;
 }
-.financialChartIndicatorMenuDropDownMenu ul, .financialChartTypePickerDropDownMenu ul {
+
+.financialChartIndicatorMenuDropDownMenu ul,
+.financialChartTypePickerDropDownMenu ul {
 	list-style-type: none;
 	margin: 0;
-	padding: 0;
+	padding: 8px;
 }
-.financialChartIndicatorMenuDropDownMenu li > ul, .financialChartTypePickerDropDownMenu li > ul {
+
+.financialChartIndicatorMenuDropDownMenu ul ul,
+.financialChartTypePickerDropDownMenu ul ul {
 	padding-left: 15px;
 	font-weight: normal;
 }
-.financialChartIndicatorMenuDropDownMenu li.checked:before, .financialChartTypePickerDropDownMenu li.checked:before {
+
+.financialChartIndicatorMenuDropDownMenu ul li,
+.financialChartTypePickerDropDownMenu ul li {
+	padding-top:4px;
+	position: relative;
+}
+
+.financialChartIndicatorMenuDropDownMenu li.checked:before{
 	margin-left: -15px;
 	margin-right: 5px;
-	content: "\2713"
+	content: "\2713";
+	position: absolute;
 }
-.financialChartTypePickerDropDownMenu li {
-	padding-left: 1.5em;
-}
-.financialChartTypePickerDropDownMenu li[data-value="Bar"],[data-value="Auto"], .financialChartTypePickerDropDownButton {
-	background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' %3E%3Cpath d='M 3 2 L 3 4 L 3 6 L 3 7 L 0 7 L 0 9 L 3 9 L 3 12 L 5 12 L 5 9 L 5 7 L 5 6 L 8 6 L 8 4 L 5 4 L 5 2 L 3 2 ZM 10 0 L 10 3 L 10 5 L 10 10 L 7 10 L 7 12 L 10 12 L 10 15 L 12 15 L 12 12 L 12 10 L 12 5 L 15 5 L 15 3 L 12 3 L 12 0 L 10 0 Z' fill='#777777' /%3E%3C/svg%3E") no-repeat 0 0;
-}
-.financialChartTypePickerDropDownButton:hover {
-	background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' %3E%3Cpath d='M 3 2 L 3 4 L 3 6 L 3 7 L 0 7 L 0 9 L 3 9 L 3 12 L 5 12 L 5 9 L 5 7 L 5 6 L 8 6 L 8 4 L 5 4 L 5 2 L 3 2 ZM 10 0 L 10 3 L 10 5 L 10 10 L 7 10 L 7 12 L 10 12 L 10 15 L 12 15 L 12 12 L 12 10 L 12 5 L 15 5 L 15 3 L 12 3 L 12 0 L 10 0 Z' fill='#0090ff' /%3E%3C/svg%3E") no-repeat 0 0;
-}
-.financialChartTypePickerDropDownMenu li[data-value="Line"], .financialChartTypePickerDropDownButton[data-value="Line"] {
-	background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' %3E%3Cpath d='M 0 11.3333 L 1.6842 13 L 6.5 8.8125 L 9.5313 11.3438 L 16 5.5 L 14 3.5 L 9.5313 8.1875 L 6.5 5.625 L 0 11.3333 Z' fill='#777777' /%3E%3C/svg%3E") no-repeat 0 0;
-}
-.financialChartTypePickerDropDownButton[data-value="Line"]:hover {
-	background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' %3E%3Cpath d='M 0 11.3333 L 1.6842 13 L 6.5 8.8125 L 9.5313 11.3438 L 16 5.5 L 14 3.5 L 9.5313 8.1875 L 6.5 5.625 L 0 11.3333 Z' fill='#0090ff' /%3E%3C/svg%3E") no-repeat 0 0;
-}
-.financialChartTypePickerDropDownMenu li[data-value="Candle"], .financialChartTypePickerDropDownButton[data-value="Candle"] {
-	background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' %3E%3Cpath d='M 8 3 L 8 13 L 10 13 L 10 16 L 12 16 L 12 13 L 14 13 L 14 3 L 12 3 L 12 0 L 10 0 L 10 3 L 8 3 ZM 0 5 L 0 12 L 2 12 L 2 15 L 4 15 L 4 12 L 6 12 L 6 5 L 4 5 L 4 2 L 2 2 L 2 5 L 0 5 Z' fill='#777777' /%3E%3C/svg%3E") no-repeat 0 0;
-}
-.financialChartTypePickerDropDownButton[data-value="Candle"]:hover {
-	background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' %3E%3Cpath d='M 8 3 L 8 13 L 10 13 L 10 16 L 12 16 L 12 13 L 14 13 L 14 3 L 12 3 L 12 0 L 10 0 L 10 3 L 8 3 ZM 0 5 L 0 12 L 2 12 L 2 15 L 4 15 L 4 12 L 6 12 L 6 5 L 4 5 L 4 2 L 2 2 L 2 5 L 0 5 Z' fill='#0090ff' /%3E%3C/svg%3E") no-repeat 0 0;
-}
-.financialChartTypePickerDropDownMenu li[data-value="Column"], .financialChartTypePickerDropDownButton[data-value="Column"] {
-	background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' %3E%3Cpath d='M 0 16 L 3 16 L 3 11 L 0 11 L 0 16 ZM 11 16 L 11 2 L 8 2 L 8 16 L 11 16 ZM 15 16 L 15 4 L 12 4 L 12 16 L 15 16 ZM 7 16 L 7 6 L 4 6 L 4 16 L 7 16 Z' fill='#777777' /%3E%3C/svg%3E") no-repeat 0 0;
-}
-.financialChartTypePickerDropDownButton[data-value="Column"]:hover {
-	background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' %3E%3Cpath d='M 0 16 L 3 16 L 3 11 L 0 11 L 0 16 ZM 11 16 L 11 2 L 8 2 L 8 16 L 11 16 ZM 15 16 L 15 4 L 12 4 L 12 16 L 15 16 ZM 7 16 L 7 6 L 4 6 L 4 16 L 7 16 Z' fill='#0090ff' /%3E%3C/svg%3E") no-repeat 0 0;
-}
+
 .financialChartLegend {
 	grid-row: 2;
 	-ms-grid-row: 2;
+}
+
+.ui-ChartButtonWrapepr {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.financialChartTypePickerDropDownButton .ui-icon-triangle-1-s,
+.ui-ChartButtonWrapepr .ui-icon-triangle-1-s {
+	font-size: 10px;
+}
+
+.ui-ChartButtonWrapepr .ui-icon-IndicatorsIcon{
+	margin-right: 5px;
 }
