--- a/src/css/themes/bootstrap4/default/modules/_infragistics.ui.chart.toolbar.scss
+++ b/src/css/themes/bootstrap4/default/modules/_infragistics.ui.chart.toolbar.scss
@@ -71,3 +71,11 @@
     color: darken($brand-primary, 10%);
   }
 }
+
+.financialChartTypePickerDropDownButton {
+  &:hover {
+    .ui-icon {
+      color: $brand-primary;
+    }
+  }
+}
