--- a/src/css/themes/bootstrap3/flatly/infragistics.theme.css
+++ b/src/css/themes/bootstrap3/flatly/infragistics.theme.css
@@ -2486,6 +2486,9 @@ body .ui-tooltip {
 .financialChartTypePickerDropDownMenu li.checked:hover {
   color: #1a242f;
 }
+.financialChartTypePickerDropDownButton:hover .ui-icon {
+  color: #2C3E50;
+}
 /***********/
 /* igCombo */
 /***********/
