--- a/src/css/themes/bootstrap3/yeti/infragistics.theme.css
+++ b/src/css/themes/bootstrap3/yeti/infragistics.theme.css
@@ -2489,6 +2489,9 @@ body .ui-tooltip {
 .financialChartTypePickerDropDownMenu li.checked:hover {
   color: #006687;
 }
+.financialChartTypePickerDropDownButton:hover .ui-icon {
+  color: #008cba;
+}
 /***********/
 /* igCombo */
 /***********/
