--- a/src/css/themes/infragistics2012/infragistics.theme.css
+++ b/src/css/themes/infragistics2012/infragistics.theme.css
@@ -2632,6 +2632,9 @@ body .ui-tooltip {
 .financialChartTypePickerDropDownMenu li.checked:hover {
   color: #1d6684;
 }
+.financialChartTypePickerDropDownButton:hover .ui-icon {
+  color: #2686ae;
+}
 /***********/
 /* igCombo */
 /***********/
