--- a/src/css/themes/ios/infragistics.theme.css
+++ b/src/css/themes/ios/infragistics.theme.css
@@ -2740,6 +2740,9 @@ body .ui-tooltip {
 .financialChartTypePickerDropDownMenu li.checked:hover {
   color: #0062cc;
 }
+.financialChartTypePickerDropDownButton:hover .ui-icon {
+  color: #007aff;
+}
 /***********/
 /* igCombo */
 /***********/
