--- a/src/css/themes/metro/modules/infragistics.ui.chart.toolbar.less
+++ b/src/css/themes/metro/modules/infragistics.ui.chart.toolbar.less
@@ -71,3 +71,11 @@
     color: darken(@accent1, 10%);
   }
 }
+
+.financialChartTypePickerDropDownButton {
+  &:hover {
+    .ui-icon {
+      color: @accent1;
+    }
+  }
+}
