Bring back “Auto” option.

--- a/src/css/structure/modules/infragistics.ui.financialchart.css
+++ b/src/css/structure/modules/infragistics.ui.financialchart.css
@@ -228,6 +228,10 @@
 	padding: 0 10px;
 }
 
+.financialChartTypePickerDropDownButton[data-value="Auto"] .ui-icon-changeable:before {
+	content: "\e94c"
+}
+
 .financialChartTypePickerDropDownButton[data-value="Bar"] .ui-icon-changeable:before {
 	content:"\e92f";
 }
