apply min-height to price pane and children

--- a/src/css/structure/modules/infragistics.ui.financialchart.css
+++ b/src/css/structure/modules/infragistics.ui.financialchart.css
@@ -21,6 +21,8 @@
 	grid-row: 3;
 	-ms-grid-row: 3;
 	margin-top: 10px;
+}
+.financialChartPrice, .financialChartPrice > div {
 	min-height: 100px;
 }
 .financialChartIndicators {
